app/assets/css/main.scss
/* ... */
.slice-body {
  @include respond(4) {
    // if .slice-body follows a heading, give it normal margin
    h2 + &, h3 + & {
      margin-left: 0;
    }
    // if it doesn't follow a heading, give it extra margin so it aligns with slices that do have headings
    margin-left: $grid * 48;
  }

  overflow: visible;
  line-height: 1.4;
  @include respond(4){
    font-size: $size-large;
    padding-left: $grid * 3;
    padding-right: $grid * 10;
    padding-top: 26px;
    overflow: auto;
  }

  h3, h4 {
    font-size: inherit;
    font-weight: 500;

    & + ul {
      padding-top: $double;
    }
  }

  p {
    margin-top: 0;
    margin-bottom: $double;
  }
}

// "simple sections" are a plain-rendering alternative to sleeves.
//
// simple sections should be children of sleeves, but other than that,
// require no particular structure or content
.simple-section {
  p {
    @include body-text;
  }

  li {
  line-height: 1.4;
  // font-weight: 300;
  // margin-top: 0;
  // margin-bottom: 16px;
  // @include respond(4){
  //   font-size: $size-large;
  // }
  }

  h3 {
    @include body-text;
    font-weight: bold;
    margin-top: $grid * 3;
    @include respond(4){
      font-size: 20px;
    }
  }

  @include respond(4) {
    overflow: visible;
    margin-left: $grid;

    h1 {
      margin-bottom: 0;
      margin-left: $grid * -1;
      @include underline($color-black,  $grid * 6, $grid * 2, $b-margin: $grid, $l-margin: $grid);
    }

    h2:first-of-type {
      margin-top: 0;
    }
  }
}

////////
// Galleries

// Wrapper to group a section title with a subtitle.
// Looks best over a gallery.
.heading-pair {
  h1, h2, h3, h4, h5, h6, p {
    @include hed-common;
    font-size: $size-large;
    @include respond(4) {
      font-weight: 300;
      font-size: $size-2xlarge;
      padding-bottom: .2em;
    }
  }

  p {
    color: $color-highlight;
  }

  @include respond(4) {
    h1, h2, h3, h4, h5, h6, {
      float: left;
      font-weight: 500;
    }
    p {
      float: right;
      font-weight: 300;
    }
  }
}

// Galttery Items
.gallery-item {
  @extend %gallery-item;

  figure {
    margin: 0;
  }

  .title {
    @extend %gallery-item-title;
  }

  .logline {
    display: block;
    margin-top: $grid;
  }

  ul {
    margin-top: $grid;
    font-size: $size-small;
    padding: 0 $grid /2;
    list-style-type: none;

    .date {
      padding-top: 4px;
    }

    .logline {
      margin-top: 0;
      color: $color-highlight;
    }
  }
}

a.gallery-item {
  border-bottom: none;
}

.gallery-item-person {
  @extend %gallery-item;
  width: 49%;
  border-top: none;
  padding: 0 $grid;
  @include respond(4) {
    padding: 0 $double;
    padding-top: 0;
    width: 32.3%;
  }

  figure {
    @extend %thumb-rounded;
    margin: 0;
  }

  .name {
    @extend %gallery-item-title;
    @include respond(4) { font-size: $size-body; }
  }

  .role {
    display: block;
    font-size: $size-small;
    font-weight: 500;
    @include overline($color-trans-gray, $grid * 7, $t-margin:$grid, $r-margin:auto, $b-margin:$grid, $l-margin:auto);
  }

  ul {
    list-style-type: none;
    padding-left: 0;
    font-size: $size-small;
    li { margin-top: $grid; }
    a {
      @include include-arrow(1px);
      @include link-highlight($color-highlight, $color-black);
      &:hover { @include include-arrow-black; }
      &:active { @include include-arrow-highlight; }
    }
  }
}

// Gallery items may optionally be contained inside one of these wrappers
.gallery-sq {
  max-width: nth($respond-breakpoints,5);
  margin-left: auto;
  margin-right: auto;
  margin-top: $double * 2;
  text-align: left;
  @include respond(3) {
    margin-left: -$double;
    margin-right: -$double;
  }
  @include respond(4) {
    margin-left: auto;
    margin-right: auto;
  }
}

.gallery-crl {
  max-width: nth($respond-breakpoints,5);
  margin-left: -14px;
  margin-right: -14px;
  margin-top: $grid * 4;
  overflow: auto;
  text-align: center;
  @include respond(3) {
    margin-left: -$double;
    margin-right: -$double;
  }
  @include respond(4) {
    margin: 0 auto;
    text-align: left;
  }

  .gallery-item {
    width: 49%;
    padding: 0 $grid;
    @include respond(3) {
      width: $grid * 25; }
    @include respond(4) {
      padding: 0 $double;
    }
    border-top: none;
  }

  figure {
    @extend %thumb-rounded;
  }
}

.gallery-thirds .gallery-item {
  width: 32%
}

// The people gallery on the about page has a very fancy gallery:
// a gallery of circles at desktop size, but a lined list at smaller
// screen sizes
.about .gallery-item-person {
  @extend %lined-list-item;
  display: inline-block;
  border-top-color: $color-trans-lightgray;
  float: none;
  width: 100%;
  padding-top: $double * 2 !important;
  margin: 0 !important;
  figure {
    float: left;
    width: 30%;
  }

  .info {
    width: 70%;
    text-align: left;
    padding-top: $grid;
    padding-left: $double;
    padding-right: $double;
  }

  .name {
    margin-top: 0;
    font-weight: 500;
    &:after {
      display: none;
    }
  }

  .role:before {
    margin-left: 1px;
  }

  .bio {
    line-height: 1.4;
    max-width: 40em;
    font-size: $size-small;
    font-weight: 500;
    color: $color-trans-darkgray;
    margin-top: 0;
  }

  @include respond(4) {
    width: 33%;
    max-width: nth($respond-breakpoints,4) + (6 * $double);
    border-top: none;
    margin-top: 0;
    padding: 0;

    figure {
      float: none;
      width: 100%;
    }

    .info {
      float: none;
      width: 100%;
      text-align: center;
    }

    .role:before {
      margin-left: auto;
      margin-right: auto;
    }
  }
}
/* ... */

